Fix overflow issue with long strings

--- a/css/elements/base.css
+++ b/css/elements/base.css
@@ -14,6 +14,7 @@ html {
 p {
   font-size: var(--paragraphFontSize);
   margin: var(--paragraphMargin);
+  overflow: auto;
 }
 
 del {
